k8s-files/hello-world-access-control-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: access-control-middleware
spec:
  ipWhiteList:
    sourceRange:
    - 192.168.1.1/32
    - 192.168.1.2/32
