k8s-files/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: my-python-app
  ports:
  - protocol: TCP
    port: 80  # Your application's port
    targetPort: 80  # Your container's port
